# LightGlue-with-FlashAttentionV2-TensorRT

./: .gitignore  .gitmodules  LICENSE  export_onnx_no_plugin.py  export_onnx_with_plugin.py  steps.txt
demo/: CMakeLists.txt  buffer_trt.cpp  buffer_trt.h  demo_0.cpp  demo_mono.cpp  lightglue_trt.cpp  lightglue_trt.h  superpoint_mono_trt.cpp  superpoint_mono_trt.h  utils_trt.cpp  utils_trt.h
lightglue_attention_plugin/: CMakeLists.txt  attention_headdim_64_fp16in_fp16out.cu  attention_headdim_64_fp16in_fp16out.cuh  attention_headdim_64_fp16in_fp32out.cu  attention_headdim_64_fp16in_fp32out.cuh  data_types.h  lightglue_attention_plugin.cpp  lightglue_attention_plugin.h
lightglue_attention_plugin/common/: checkMacrosPlugin.cpp
lightglue_pytorch_no_plugin/: __init__.py  lightglue.py  superpoint.py
lightglue_pytorch_with_plugin/: lightglue.py  superpoint.py
matches_demo_mono_0/: console.txt
trt_engine_files/: lightglue_for_superpoint_no_plugin.1_1024_1024.best.noDLA.engine.txt  lightglue_for_superpoint_no_plugin.1_1024_1024.fp16.noDLA.engine.txt  lightglue_for_superpoint_no_plugin.1_1024_1024.fp32.noDLA.engine.txt  lightglue_for_superpoint_with_plugin.1_1024_1024.fp16.noDLA.engine.txt  lightglue_for_superpoint_with_plugin.1_1024_1024.fp32.noDLA.engine.txt  superpoint.mono.480x640.best.noDLA.engine  superpoint.mono.480x640.best.noDLA.engine.txt  superpoint.mono.480x640.fp16.noDLA.engine  superpoint.mono.480x640.fp16.noDLA.engine.txt  superpoint.mono.480x640.fp32.noDLA.engine.txt  superpoint.stereo.480x640.fp16.noDLA.engine  superpoint.stereo.480x640.fp16.noDLA.engine.txt  superpoint.stereo.480x640.fp32.noDLA.engine.txt
